# CreatingTimersInCpp

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
res/: config.h.in
src/: main.cc
